--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,14 @@
         android:theme="@style/Theme.MeMaww"
         tools:targetApi="31">
         <activity
-            android:name=".ReaderWebViewActivity"
+            android:name=".Activities.BookingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Activities.ReaderWebViewActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
