--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.Manifest.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+
 
     <application
         android:allowBackup="true"
@@ -21,7 +26,7 @@
         android:theme="@style/Theme.MeMaww"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.BookingActivity"
+            android:name=".Activities.OrderCollectionActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
