--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,20 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'co.paystack.android:paystack:3.3.2'
+
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.scottyab:aescrypt:0.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.github.apeatu:theteller-android-sdk:1.0.7'
+    implementation 'com.github.apeatu:theteller-android-sdk:1.0.7'
+
 }
