Allowed pay on pickup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         </activity>
 
         <service
+            android:name=".Services.BackgroundService"
+            android:exported="false" />
+
+        <service
             android:name=".Services.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
