--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.github.apeatu:theteller-android-sdk:1.0.7'
     implementation platform('com.google.firebase:firebase-bom:33.0.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+
+
 }
