--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
-    id 'com.android.application'
+    alias(libs.plugins.android.application)
     id 'com.google.gms.google-services'
 }
 
 android {
     namespace 'com.memaww.memaww'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.memaww.memaww"
-        minSdk 23
-        targetSdk 33
-        versionCode 1
+        minSdk 24
+        targetSdk 34
+        versionCode 5
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -24,44 +24,45 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'com.google.firebase:firebase-messaging:23.4.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.amitshekhar.android:android-networking:1.0.2'
-    implementation 'co.paystack.android:paystack:3.3.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    implementation 'org.parceler:parceler-api:1.1.12'
-    annotationProcessor 'org.parceler:parceler:1.1.12'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    implementation 'com.scottyab:aescrypt:0.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.github.apeatu:theteller-android-sdk:1.0.7'
-    implementation 'com.github.apeatu:theteller-android-sdk:1.0.7'
-    implementation platform('com.google.firebase:firebase-bom:33.0.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
-    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.activity
+    implementation libs.constraintlayout
+    testImplementation libs.junit
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
 
-
-
-
-
+    //----------------------------------------------------------------
+    implementation libs.swiperefreshlayout
+    implementation libs.picasso
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.play.services.location
+    implementation libs.logging.interceptor
+    implementation libs.parceler.api
+    annotationProcessor libs.parceler.parceler
+    implementation libs.converter.scalars
+    implementation libs.aescrypt
+    implementation libs.converter.scalars
+    implementation libs.aescrypt
+    implementation libs.firebase.core
+    implementation libs.firebase.auth
+    implementation platform(libs.firebase.bom)
+    implementation libs.firebase.analytics
+    implementation libs.places
+    implementation libs.firebase.messaging
+    //implementation libs.theteller.android.sd
+    implementation libs.theteller.android.sdk
+    //implementation libs.android.networking
+    implementation libs.fast.android.networking.android.networking
+    //implementation libs.stateprogressbar
+    //implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+    implementation(name:'stateprogressbar', ext:'aar')
 }
