--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,20 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
-        google()
+        google {
+            content {
+                includeGroupByRegex("com\\.android.*")
+                includeGroupByRegex("com\\.google.*")
+                includeGroupByRegex("androidx.*")
+            }
+        }
         mavenCentral()
+        gradlePluginPortal()
+        maven { url = uri("https://jcenter.bintray.com") }
+        maven { url 'https://jitpack.io' }
+        jcenter()
+        flatDir {
+            dirs("mylibs")
+        }
     }
 }
 dependencyResolutionManagement {
@@ -10,9 +22,14 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url = uri("https://jcenter.bintray.com") }
         maven { url 'https://jitpack.io' }
         jcenter() // Warning: this repository is going to shut down soon
+        flatDir {
+            dirs("mylibs")
+        }
     }
 }
+
 rootProject.name = "MeMaww"
 include ':app'
