--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.Manifest.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove" />
+    <uses-permission
+        android:name="com.google.android.gms.permission.AD_ID"
+        tools:node="remove" />
 
     <application
         android:name=".Util.Home"
@@ -25,6 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeMaww"
         tools:targetApi="31">
+        <activity
+            android:name=".Activities.RemainingItemsActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.BuySubscriptionOfferActivity"
             android:exported="false"
